--- a/theme/userchrome.css
+++ b/theme/userchrome.css
@@ -53,7 +53,7 @@ i.icon-notes {
 } */
 
 /* TWEAK: Show/hide "last changed" timestamp next to the note title */
-.rli-editor > div > div > div > div > input + span {
+.rli-editor > div > div > div > div > div > span {
   display: none !important;
 }
 
