--- a/theme/userstyle.css
+++ b/theme/userstyle.css
@@ -1,4 +1,4 @@
-/* JOPLIN WANAKA UI */
+/* JOPLIN WANAKA UI - v0.4.0 */
 
 /**************************************************************************************************
  *  VARIABLES
